syntax = "proto3";
package messages;

option go_package = "github.com/dave/groupshare/server/pb/auth;auth";

message Login_Request {
  string device = 1;
  string email = 2;
}
message Login_Response {
  string time = 1;
}

message Code_Request {
  string device = 1;
  string email = 2;
  string time = 3;
  string code = 4;
  bool test = 5; // only for test environment, setting this to true will accept any code
}
message Code_Response {
  string id = 1;
  string hash = 2;
}

message Validate_Request {
  // empty
}

message Token {
  string id = 1;
  string device = 2;
  string hash = 5;
}